namespace SteamHub.Api.Entities;

public class Role
{
    public RoleEnum Id { get; set; }
    public string Name { get; set; }
}